--- a/lwj/.settings/org.eclipse.wst.common.component
+++ b/lwj/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="misli">
+    <wb-module deploy-name="lwj">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="misli"/>
-        <property name="java-output-path" value="/misli/build/classes"/>
+        <property name="context-root" value="lwj"/>
+        <property name="java-output-path" value="/lwj/build/classes"/>
     </wb-module>
 </project-modules>
